# helmet-marcxml-bffi-skos-pipeline

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.githooks/: pre-commit
.github/: pull_request_template.md
.github/workflows/: ci.yml
config/: Caddyfile  bffi-admin-vocabulary.ttl  bffi.cfg  fuseki-config.ttl  prometheus.yml  skosmos-config.ttl
config/grafana/dashboards/: bffi-pipeline.json
config/overlay/: bffi-skos-overlay.ttl
config/shapes/: bffi.shape.ttl  bibframe-conversion.shape.ttl  post-load-smoke.rq
docs/: BUILD_PLAN.md  anonymous-main-entry-minting.md  cataloguer-asks-fi.md  ci-strategy.md  external-dependencies.md  local-inference.md  marcxml-to-bffi-skosmos-pipeline.md  observability.md  runbook.md  tech-stack.md  validation-strategy.md
docs/archived/: BUILD_PLAN.md  README.md  cataloguer-asks-fi.md  local-inference.md  marcxml-to-bffi-skosmos-pipeline.md
docs/archived/eval-runs/: invalid-test-no-llm.json  p02-a6-concurrency-sweep.json  p02-b-ttft-bench.json  p02-phase-a-mlx-lm-instructed.json  p02-phase-a-mlx-lm-only-jsonmode.json  p02-phase-a-mlx-lm-only.json  p02-phase-a-mlx-lm-parity.json  p02-phase-a-ollama-baseline.json  p02-phase-b-mlx-lm.json
docs/performance/: 2026-05-12-5k-m2-max-phase-a.md  2026-05-12-5k-m2-max-phase-a2.md  2026-05-12-5k-m2-max.md  2026-05-13-5k-m2-max-phase-b-e.md  2026-05-13-5k-m2-max-phase-b1.md  2026-05-13-5k-m2-max-phase-c-attempt.md  2026-05-13-5k-m2-max-phase-e.md  2026-05-13-cataloguer-feedback-audit.md  2026-05-14-m8-corpus-load.md  README.md
docs/plans/: README.md  p-02-inference-stack-tuning.md  p-04-m5-calibration.md  p-05-m3-cascade-follow-ups.md  p-06-gold-set-growth.md
docs/plans/abandoned/: README.md  p-05-anonymous-work-canonicalisation.md  p-14-m9-phase-c-audit.md
docs/plans/backlog/: README.md  p-02-inference-stack-tuning.md  p-03-m6-stall-watchdog.md  p-04-m5-calibration.md  p-05-m3-cascade-follow-ups.md  p-06-gold-set-growth.md  p-08-richer-rda-33x-synthesis.md  p-10-m9-reconcile-throughput.md  p-12-observability-cleanup.md  p-13-per-run-metric-isolation.md  p-14-m9-phase-c-audit.md  p-31-dashboard-artifacts-panel.md  p-32-run-lifecycle-management.md  p-36-m3-python-to-sparql-migration.md  p-38-stage-package-restructure.md  p-39-m9-non-primary-contribution-reconciliation.md
docs/plans/completed/: README.md  p-02-inference-stack-tuning.md  p-03-m6-stall-watchdog.md  p-08-richer-rda-33x-synthesis.md  p-10-m9-reconcile-throughput.md  p-11-structured-observability.md  p-12-observability-cleanup.md  p-13-per-run-metric-isolation.md  p-15-preserve-authority-uris-at-m3.md  p-16-fallback-tier-confidence-gating.md  p-17-exporter-multi-sidecar-discovery.md  p-18-m8-emit-start-before-corpus-load.md  p-19-m8-corpus-load-throughput.md  p-31-dashboard-artifacts-panel.md  p-32-run-lifecycle-management.md  p-34-m8-mint-anonymous-main-entry-works.md  p-35-m3-cascade-follow-ups.md  p-36-m3-python-to-sparql-migration.md  p-38-stage-package-restructure.md  p-40-python-314-and-dependency-uplift.md
docs/plans/in-progress/: README.md  p-02-inference-stack-tuning.md  p-03-m6-stall-watchdog.md  p-08-richer-rda-33x-synthesis.md  p-10-m9-reconcile-throughput.md  p-11-structured-observability.md  p-12-observability-cleanup.md  p-13-per-run-metric-isolation.md  p-17-exporter-multi-sidecar-discovery.md  p-18-m8-emit-start-before-corpus-load.md  p-19-m8-corpus-load-throughput.md  p-31-dashboard-artifacts-panel.md  (+6 more)
docs/proposals/: README.md  performance-enhancements.md  prop-01-llm-distillation-pre-screener-for-M6.md  prop-02-inference-stack-tuning-for-M6.md  prop-03-m6-stall-watchdog.md  prop-04-consolidate-on-mlx-lm.md  prop-04-consolidate-on-vllm-mlx.md  prop-06-structured-output-backend.md  prop-08-richer-rda-33x-synthesis.md  prop-09-library-agnostic-source.md  prop-10-m9-reconcile-throughput.md  prop-11-structured-observability.md  prop-12-dashboard-stale-and-not-configured.md  prop-13-per-run-metric-isolation.md
gold/: README.md  cataloguer-feedback-2026-05-13.jsonl  contrib.jsonl  gold.jsonl
prompts/: contrib_extract_v1.txt  judge_v1.txt  judge_v1_fast.txt  picker_v1.txt  title_lang_v1.txt
scripts/: README.md  audit-merge-clusters.py  llm-pull.sh  p02-a6-concurrency-bench.py  p02-b-ttft-bench.py  p02-parity-bench.sh  p10-phase-b-cold-warm-audit.py  republish.sh  run-fast-export.sh  run-full-pipeline.sh  run-sierra-export.sh  select-overnight-sample.py  select-run-sample.py  start-mlx-lm.sh  test-runs-lifecycle.sh
sparql/: bf_to_bffi_expression.rq  bf_to_bffi_work.rq
sparql/admin/: admin_with_rationale.rq
sparql/queries/: grow_overrides.rq  helmet_lookup.rq
src/bffi_pipeline/: __init__.py  blocking.py  cataloguer_review.py  cli.py  config.py  contrib_extract.py  contrib_extract_llm.py  contrib_variants.py  helmet.py  llm_json_mode.py  metrics_exporter.py  run_manifest.py  runner.py  runs_reset.py  status.py  title_lang.py  title_lang_llm.py  uris.py
tests/: conftest.py
tests/data/: m6_prompt_prefix_fast.txt  m6_prompt_prefix_full.txt
tests/integration/: test_bf_to_bffi.py  test_contrib_extract_live.py  test_judge_live.py  test_marc_to_bf.py  test_reconcile_live.py  test_workkey.py
tests/unit/: conftest.py  test_bf_to_bffi.py  test_bffi_shape.py  test_blocking_fold.py  test_cataloguer_review.py  test_cli.py  test_config.py  test_contrib_extract.py  test_contrib_extract_llm.py  test_contrib_gold.py  test_contrib_variants.py  test_embeddings.py  test_eval_embed_benchmark.py  test_eval_gold_set.py  test_eval_grow.py  test_eval_harness.py  test_export.py  test_fuseki_clear.py  test_helmet.py  test_judge.py  test_judge_batch.py  test_load.py  test_load_finto.py  test_local_concept_resolver.py  test_marc_subfield_sanitize.py  test_marc_to_bf.py  test_marcxml_validation.py  test_merge.py  test_metrics_exporter.py  test_observability.py  test_probes.py  test_provenance.py  test_reconcile.py  test_run_manifest.py  test_runner.py  test_runs_list.py  test_runs_prune.py  test_runs_reset.py  test_runs_tag_info.py  test_skeleton.py  (+10 more)
(+199 files in other folders)
