[project]
name = "bffi-pipeline"
version = "0.1.0"
description = "MARCXML to BFFI Works/Expressions to Skosmos pipeline (pro bono for the National Library of Finland)."
license = "Apache-2.0"
authors = [{ name = "Mikko Vihonen" }]
requires-python = ">=3.11,<3.13"
readme = "README.md"

dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "rdflib>=7.0",
    "pymarc>=5.1",
    "lxml>=5.2",
    "pyshacl>=0.26",
    "skosify>=2.3",
    "SPARQLWrapper>=2.0",
    "langchain-openai>=0.1",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8",
    "python-ulid>=2.7",
    "jinja2>=3.1",
    "httpx>=0.27",
    "requests>=2.32",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-requests",
    "lxml-stubs",
]

[project.scripts]
bffi-pipeline = "bffi_pipeline.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bffi_pipeline"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "SIM", "PL"]
ignore = ["PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]
# Heavy ML imports (sentence_transformers, faiss, numpy) are deferred to
# function bodies on purpose so the rest of the CLI does not pay the
# multi-second import cost.
"src/bffi_pipeline/stages/embeddings.py" = ["PLC0415"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "faiss",
    "faiss.*",
    "sentence_transformers",
    "sentence_transformers.*",
    "skosify",
    "skosify.*",
    "pyshacl",
    "pyshacl.*",
    "SPARQLWrapper",
    "SPARQLWrapper.*",
    "pymarc",
    "pymarc.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require Docker services (Fuseki/Skosmos)",
    "requires_llm: tests that additionally require a running Ollama instance",
]
