[project]
name = "bffi-pipeline"
version = "0.1.0"
description = "MARCXML to BFFI Works/Expressions to Skosmos pipeline (pro bono for the National Library of Finland)."
license = "Apache-2.0"
authors = [{ name = "Mikko Vihonen" }]
requires-python = ">=3.11,<3.13"
readme = "README.md"

dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "rdflib>=7.0",
    "pymarc>=5.1",
    "lxml>=5.2",
    "pyshacl>=0.26",
    "skosify>=2.3",
    "SPARQLWrapper>=2.0",
    "langchain-openai>=0.1",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8",
    "python-ulid>=2.7",
    "jinja2>=3.1",
    "httpx>=0.27",
    "requests>=2.32",
    "lingua-language-detector>=2.0",
    # P-11 Phase D: local-only Prometheus exporter for the
    # ``bffi-pipeline serve-metrics`` subcommand. The dep is pulled in
    # only when the operator runs serve-metrics; pipeline stages never
    # import it. Outbound-telemetry-free — the exporter just exposes a
    # local ``/metrics`` endpoint that the operator's own Prometheus
    # container scrapes. See docs/proposals/prop-11-structured-observability.md.
    "prometheus-client>=0.20",
    # `marcxml_export_pipeline.sierra` — Sierra Postgres replica → MARCXML
    # export, migrated from the (now-archived) helmet-sierra-data-tools repo.
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-requests",
    "lxml-stubs",
]

[project.scripts]
bffi-pipeline = "bffi_pipeline.cli:app"
marcxml-export-sierra = "marcxml_export_pipeline.sierra.marcxml:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bffi_pipeline", "src/marcxml_export_pipeline"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "SIM", "PL"]
ignore = ["PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]
# Heavy ML imports (sentence_transformers, faiss, numpy) and the LangChain
# client are deferred to function bodies on purpose so the rest of the CLI
# does not pay the multi-second import cost.
"src/bffi_pipeline/stages/m5/runner.py" = ["PLC0415"]
"src/bffi_pipeline/stages/m6/runner.py" = ["PLC0415"]
"src/bffi_pipeline/stages/m3/runner.py" = ["PLC0415"]
"src/bffi_pipeline/stages/m9/runner.py" = ["PLC0415"]
"src/bffi_pipeline/stages/m10/load_finto.py" = ["PLC0415"]
"src/bffi_pipeline/stages/m10/skosify_run.py" = ["PLC0415"]
"src/bffi_pipeline/eval/embed_benchmark.py" = ["PLC0415"]
"src/bffi_pipeline/eval/harness.py" = ["PLC0415"]
"src/bffi_pipeline/title_lang.py" = ["PLC0415"]
"src/bffi_pipeline/title_lang_llm.py" = ["PLC0415"]
"src/bffi_pipeline/contrib_extract_llm.py" = ["PLC0415"]
"src/bffi_pipeline/stages/bf_to_bffi.py" = ["PLC0415"]
"src/bffi_pipeline/stages/load_finto.py" = ["PLC0415"]
"src/bffi_pipeline/stages/merge.py" = ["PLR0915"]
"src/bffi_pipeline/cli.py" = ["PLC0415"]
# SQLAlchemy + dotenv are deferred to function bodies so the CLI
# entry point starts quickly when not actually streaming from the
# DB (e.g. invoking just for `--help`), and so the module imports
# cleanly without optional dotenv installed.
"src/marcxml_export_pipeline/sierra/marcxml.py" = ["PLC0415"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "faiss",
    "faiss.*",
    "sentence_transformers",
    "sentence_transformers.*",
    "skosify",
    "skosify.*",
    "pyshacl",
    "pyshacl.*",
    "SPARQLWrapper",
    "SPARQLWrapper.*",
    "pymarc",
    "pymarc.*",
]
ignore_missing_imports = true

# pymarc 5.x ships ``py.typed`` but several methods (Record.add_field,
# marcxml.record_to_xml, …) are unannotated. Silence the cascading
# "Call to untyped function" errors on the one module that uses these
# calls heavily; the rest of the Sierra-export logic stays under
# --strict so dataclass / DTO contracts are fully type-checked.
[[tool.mypy.overrides]]
module = ["marcxml_export_pipeline.sierra.marcxml"]
disable_error_code = ["no-untyped-call"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require Docker services (Fuseki/Skosmos)",
    "requires_llm: tests that additionally require a running Ollama instance",
]
